2009-09-22  Helmut Eller  <heller@common-lisp.net>

	* swank-ccl.lisp (find-definitions): For fbound symbols also
	consider source-notes in the function object.  Useful if
	the function slot was set with (setf (symbol-function ..))
	and not by defun.

2009-09-21  Stas Boukarev  <stassats@gmail.com>

	* doc/slime.texi (slime-sprof): document slime-sprof contrib.

2009-09-20  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-abcl.lisp (thread-description): Fix typo.
	(set-thread-description): Ditto.

2009-09-20  Tobias C. Rittweiler <tcr@freebits.de>

	Generalize M-? (or M-_ respectively.)

	It will now list:

	  - call sites for functions,

	  - macroexpand sites for macros,

	  - binding, setting, referencing sites for variables,

	  - specializing methods for classes.

	* slime.el (slime-xref): Deal with :not-implemented.
	(slime-xrefs): New. Makes RPC request to XREFS.
	(slime-edit-callers): Renamed to `slime-edit-uses'.
	(slime-edit-uses): Use slime-xrefs.

	* swank-backend.lisp (who-*): Add default implementation which
	returns :not-implemented.

	* swank.lisp (xref-doit): Extracted from XREF.
	(xref): Pass over :not-implemented to Emacs side.
	(xrefs): New slime fun. To return results of multiple XREF
	requests at once.

2009-09-20  Mark Evenson  <evenson@panix.com>

	Use *INVOKE-DEBUGGER-HOOK* introduced in ABCL by analogy to SBCL
	 (Tobias Rittweiler).

	* swank-abcl.lisp (sys::break): Conditionally redefine SYS::BREAK
	only if SYS::INVOKE-DEUBBGER-HOOK is not present.

2009-09-18  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-parent-bindings): Define M-? as
	`slime-edit-callers', too. My previous choice of M-_ was warped
	due to my German layout.

2009-09-18  Tobias C. Rittweiler <tcr@freebits.de>

	New binding: M-_ (`slime-edit-callers').

	Similiar to `slime-who-calls' but only creates an Xref buffer if
	needed for disambiguation, and also pushes to the definition
	stack.

	Spiritually like M-. but works "in the other direction".
