@@ -1,3 +1,8 @@
+2009-09-23  Helmut Eller  <heller@common-lisp.net>
+
+	* swank-sbcl.lisp (receive-if): Bind *break-on-signals* to
+	nil before using with-timeout.
+
 2009-09-22  Helmut Eller  <heller@common-lisp.net>
 
 	* swank-ccl.lisp (find-definitions): For fbound symbols also
